add integration modification codes